@@ -6,7 +6,9 @@ Bug numbers are references to bugs in http://www.achievo.org/bugzilla
 
 Changes in Achievo 1.4
 ----------------------
-* Now we use the recipients language, when sending timeguard reminder email 
++ Added ability to configure projectcode autonumbering in the configuration
+  file configs/project.inc.php. [Guido]
+* Now we use the recipients language, when sending timeguard reminder email
   to an employee. [Yury]
 
 Changes in Achievo 1.3.1
